--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="login">Login</string>
     <string name="retry_label">Retry agian</string>
     <string name="no_item">No item</string>
-    <string name="tag_list">Tag list</string>
+    <string name="tag_list">My Tags</string>
+    <string name="tag_locations">Map</string>
+    <string name="tag_notifications">Notifications</string>
     <string name="register_a_tag">Register a Tag</string>
     <string name="name_your_tag">Name your tag</string>
     <string name="add">Add</string>
