refs #10 Last location on the map  - This feature is working as of this revision, maybe some minor  refactorings be needed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,13 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="no_internet_access">No Internet Access! please connect to the internet for continue your action.</string>
+    <string name="no_location_service">Location service is disabled, please enable location service to continue.</string>
+    <string name="no_bluetooth_service">Bluetooth is disabled, please enable Bluetooth to continue.</string>
     <string name="category">Category</string>
     <string name="keys">Keys</string>
     <string name="wallet">Wallet</string>
     <string name="bag">Bag</string>
     <string name="accessories">Accessories</string>
     <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 </resources>
