refs #11 Notify customer when a Tag found  - Customers can report lost eTags and also mark them as found(Manually)  as of this revision. Note: When eTag is seen by owner's phone then we can mark that eTag as found automatically.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,15 @@
     <string name="offline">Offline</string>
     <string name="retry_label">Retry agian</string>
     <string name="no_item">No item</string>
-    <string name="my_tags">My Tags</string>
+    <string name="my_tags">My eTags</string>
     <string name="tag_locations">Map</string>
     <string name="tag_notifications">Notifications</string>
-    <string name="register_a_tag">Register a Tag</string>
-    <string name="name_your_tag">Name your tag</string>
+    <string name="register_a_tag">Register a eTag</string>
+    <string name="name_your_tag">Name your eTag</string>
+    <string name="mark_as_lost">Mark as lost item</string>
+    <string name="mark_as_found">Mark as found item</string>
     <string name="add">Add</string>
+    <string name="mark">Mark</string>
     <string name="cancel">Cancel</string>
     <string name="signout">Sign out</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
